AMBARI-24572 Fixing the cluster name alignment

--- a/ambari-web/app/styles/top-nav.less
+++ b/ambari-web/app/styles/top-nav.less
@@ -50,6 +50,7 @@
     }
     .navbar-text.brand-wrapper {
       margin-top: 17px;
+      margin-left: -10px;
     }
     .navbar-text.brand-wrapper, .cluster-notifications {
       color: @top-nav-brand-color;
